k8s-configs/ping-cloud/base/pingdirectory/server/cloud-generic/statefulset.yaml
# This defines the deployment (as a stateful set) of the pingdirectory servers

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingdirectory
  labels:
    class: pingdirectory-server
spec:
  serviceName: pingdirectory
  replicas: 3
  selector:
    matchLabels:
      class: pingdirectory-server
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      annotations:
        lastUpdateReason: "NA"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "8080"
        newrelic.io/scrape: "true"
      labels:
        class: pingdirectory-server
        entitled-app: "true"
    spec:
      serviceAccount: ping-serviceaccount
      priorityClassName: high-priority-apps-to-avoid-pending-state
      affinity:
        podAntiAffinity:
          # Add a hard requirement for each PD pod to be deployed to a different node
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - pingdirectory
              topologyKey: "kubernetes.io/hostname"
          # Add a soft requirement for each PD pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingdirectory
                topologyKey: "topology.kubernetes.io/zone"
        # this does not apply in dev/test and is removed via kustomize
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: pingidentity.com/pd
                    operator: In
                    values:
                      - "true"
      # this does not apply in dev/test and is removed via kustomize
      tolerations:
        - key: "pingidentity.com/pd-only"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      terminationGracePeriodSeconds: 300
      containers:
        - name: pingdirectory
          securityContext:
            runAsGroup: 9999
            runAsNonRoot: true
            runAsUser: 9031
            allowPrivilegeEscalation: false
          image: public.ecr.aws/r2h3l6e4/pingcloud-apps/pingdirectory/dev:v1.19-release-branch-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1389
              name: ldap
            - containerPort: 1636
              name: ldaps
            - containerPort: 1443
              name: https
            - containerPort: 8989
              name: repl
          resources:
            limits:
              memory: "12Gi"
              cpu: "3"
            requests:
              memory: "12Gi"
              cpu: "2"
          volumeMounts:
            - name: ssh-dir
              mountPath: /home/ping/.ssh
            - name: shared-dir
              mountPath: /opt/shared-dir
            - name: topology-descriptor
              mountPath: /opt/staging/topology/descriptor.json
              subPath: descriptor.json
            - name: data-dir
              mountPath: /opt/staging/topology.json
              subPath: topology.json
            - name: data-dir
              mountPath: /usr/local/bin/kubectl
              subPath: kubectl
            - name: data-dir
              mountPath: /opt/staging/hooks/logger.lib.sh
              subPath: logger.lib.sh
            - name: data-dir
              mountPath: /opt/staging/newrelic.jar
              subPath: newrelic.jar
            - name: data-dir
              mountPath: /opt/staging/jmx_prometheus_javaagent-0.14.0.jar
              subPath: jmx_prometheus_javaagent-0.14.0.jar
            - name: out-dir
              mountPath: /opt/out
            - name: pingdirectory-passwords
              mountPath: /usr/local/secrets
              readOnly: true
            - name: acme-tls-cert
              mountPath: /usr/local/secrets/certs
              readOnly: true
            - name: pingdirectory-license
              mountPath: /opt/in/instance/PingDirectory.lic
              subPath: PingDirectory.lic
            - name: data-dir
              mountPath: /opt/staging/ds_env_vars
              subPath: ds_env_vars
            - name: pingdirectory-truststore-certs
              mountPath: /usr/local/secrets/truststore_certs
              readOnly: true
          readinessProbe:
            exec:
              command:
                - /opt/staging/hooks/85-readiness.sh
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 5
          startupProbe:
            exec:
              command: ["sh", "-c", "echo 'Finished delaying PingDirectory by 180s using startupProbe'"]
            # Do not start the startup probe for 3 minutes after starting the
            # container because PD will never finish its start/restart sequence
            # before then, in practice. Run the startup probe every 5 seconds
            # and tolerate up to 100 failures, so PD will be marked as ready as far as it really be ready
            initialDelaySeconds: 180
            periodSeconds: 5
            failureThreshold: 100
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - /opt/staging/hooks/86-liveness.sh
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
          lifecycle:
            preStop:
              exec:
                command:
                  - /opt/staging/hooks/86-pre-stop.sh
        - name: pingdirectory-statsd-exporter
          securityContext:
            runAsGroup: 9999
            runAsNonRoot: true
            runAsUser: 9031
            allowPrivilegeEscalation: false
          image: public.ecr.aws/r2h3l6e4/pingcloud-clustertools/prom/statsd-exporter:v0.14.1
          args:
            - "--statsd.mapping-config=/tmp/mapping/pingdirectory-statsd-mapping.yml"
            - "--statsd.listen-udp=:8125"
            - "--web.listen-address=:9102"
          ports:
            - containerPort: 9102
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8125
              protocol: UDP
          volumeMounts:
            - mountPath: /tmp/mapping/
              name: pingdirectory-statsd-mapping
              readOnly: false
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
      securityContext:
        fsGroup: 9999
      volumes:
        - name: ssh-dir
          emptyDir: {}
        - name: shared-dir
          emptyDir: {}
        - name: data-dir
          emptyDir: {}
        - name: pingdirectory-init
          configMap:
            name: pingcommon-init
            defaultMode: 0555
        - name: topology-descriptor
          configMap:
            name: topology-descriptor
            optional: true
            defaultMode: 0644
        - name: ssh-id-key-secret
          secret:
            secretName: ssh-id-key-secret
            optional: true
            defaultMode: 0400
        - name: known-hosts-config
          configMap:
            name: known-hosts-config
            optional: true
            defaultMode: 0644
        - name: out-dir
          persistentVolumeClaim:
            claimName: out-dir
        - name: pingdirectory-license
          secret:
            secretName: pingdirectory-license
            optional: true
            defaultMode: 0400
        - name: pingdirectory-passwords
          secret:
            secretName: pingdirectory-passwords
            optional: true
            defaultMode: 0400
        - name: acme-tls-cert
          secret:
            secretName: acme-tls-cert
            optional: true
            defaultMode: 0400
        - name: pingdirectory-statsd-mapping
          configMap:
            name: pingdirectory-statsd-mapping
        - name: pingdirectory-truststore-certs
          secret:
            secretName: pingdirectory-truststore-certs
            optional: true
            defaultMode: 0400
  volumeClaimTemplates:
    - metadata:
        name: out-dir
        annotations:
          volume.autoscaler.kubernetes.io/ignore: "true"
        labels:
          class: pingdirectory-server
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: pingdirectory-gp3
        resources:
          requests:
            storage: 40Gi
